manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager-service
  labels:
    app: manager
spec:
  selector:
    app: manager
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: manager
  labels:
    app: manager
spec:
  selector:
    matchLabels:
      app: manager
  serviceName: manager-service
  replicas: 3
  template:
    metadata:
      labels:
        app: manager
    spec:
      serviceAccountName: manager-service-account
      containers:
        - name: manager
          image: vlassisioa/distributed-mapreduce:manager
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
