gui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gui-ingress
spec:
  rules:
    - host: mapreduce-gui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gui-service
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
